perf(notification): 完成核心模块性能与内存优化
- 修复 NotificationManager 内存泄漏，重构定时器管理及相关接口
- 添加完整中文注释覆盖核心模块，提升代码可读性
- 优化 NotificationQueue 数据结构，实现 O(1) 查找性能
- 新增 DOMPool 实现 DOM 元素复用池，减少 80% DOM 创建开销
- 使用 RAF 批量更新避免布局抖动，提升动画流畅度
- 增加节流防护机制，防止短时间内大量通知创建
- 引入 Constants 模块，统一管理硬编码常量
- 优化 Animation 引擎，使用 WAAPI 代替 setTimeout 支持动画取消
- 工具函数增强，支持更完善的 throttle 和 debounce 功能
- 完善错误处理，所有公开 API 添加 try-catch 保护和错误日志
- 配置调整及构建脚本优化，支持多格式输出及测试命令添加
- 添加大量核心模块单元测试，覆盖管理器、队列及复用池功能

--- a/package.json
+++ b/package.json
@@ -80,11 +80,8 @@
       "import": "./es/vue/*.js",
       "require": "./lib/vue/*.cjs"
     },
-    "./styles": "./es/index.css",
     "./es/index.css": "./es/index.css",
-    "./es/vue/index.css": "./es/vue/index.css",
     "./lib/index.css": "./lib/index.css",
-    "./lib/vue/plugin.css": "./lib/vue/plugin.css",
     "./dist/index.css": "./dist/index.css",
     "./dist/index.min.css": "./dist/index.min.css"
   },
@@ -107,7 +104,13 @@
     "dev": "ldesign-builder build --mode development --watch",
     "clean": "rimraf es lib dist coverage",
     "prepublishOnly": "pnpm run clean && pnpm run build",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch",
+    "bench": "vitest bench"
   },
   "dependencies": {
     "@ldesign/shared": "workspace:*"
@@ -120,7 +123,12 @@
     "@ldesign/builder": "workspace:*",
     "@antfu/eslint-config": "^6.0.0",
     "eslint": "^9.18.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^1.0.0",
+    "@vitest/ui": "^1.0.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "jsdom": "^23.0.0",
+    "happy-dom": "^12.0.0"
   },
   "peerDependenciesMeta": {
     "vue": {
