--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -72,8 +72,7 @@
     "LICENSE",
     "CHANGELOG.md",
     "es",
-    "lib",
-    "dist"
+    "lib"
   ],
   "scripts": {
     "build": "ldesign-builder build",
