--- a/packages/vue/.gitignore
+++ b/packages/vue/.gitignore
@@ -1,4 +1,20 @@
-cjs
-dist
+﻿# Build outputs
 es
 esm
+lib
+dist
+cjs
+
+# Dependencies
+node_modules
+
+# IDE
+.vscode
+.idea
+
+# Logs
+*.log
+
+# Cache
+.rollup.cache
+*.tsbuildinfo
